--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/SafetyFirst/images/favicon.png" />
     <link
-      rel="icon"
-      type="image/svg+xml"
+      rel="shortcut icon"
+      type="image/png"
       href="/SafetyFirst/images/favicon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
